	PR c++/47482 	* parser.c (cp_parser_enumerator_definition): Call 	fold_non_dependent_expr.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@170156 138bc75d-0d04-0410-961f-82ee72b054a4